--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ djangorestframework-simplejwt = "==5.2.2"
 pillow = "==10.4.0"
 pyjwt = "==2.9.0"
 sqlparse = "==0.5.1"
+django-rest-swagger = "*"
 
 [dev-packages]
 
