--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: baseconfig
+  - name: jobseekerdb
     plan: free
-    databaseName: jobseekdb
+    databaseName: jobseekdb_nwqn
     user: cysoft
 
 services:
@@ -13,7 +13,7 @@ services:
     startCommand: "python -m gunicorn baseconfig.asgi:application -k uvicorn.workers.UvicornWorker"    envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysitedb
+          name: jobseekerdb
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
