--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,20 @@
 databases:
-  - name: jobseekerdb
+  - name: myjobdb
     plan: free
-    databaseName: jobseekdb_nwqn
-    user: cysoft
+    databaseName: myjobdb
+    user: myjobdb
 
 services:
   - type: web
     plan: free
-    name: jobseeker
+    name: myjobdb
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn baseconfig.asgi:application -k uvicorn.workers.UvicornWorker"    envVars:
+    startCommand: "python -m gunicorn baseconfig.asgi:application -k uvicorn.workers.UvicornWorker"    
+    envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: jobseekerdb
+          name: myjobdb
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
