--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coreschema==0.0.4
 dj-database-url==2.2.0
 Django==5.1.2
 django-cors-headers==4.5.0
+django-environ==0.11.2
 django-rest-swagger==2.2.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.2.2
